# flask-example

./: LICENSE  pyproject.toml
.dockerdb/: docker-compose.yml
flaskr/: __init__.py  models.py  views.py
flaskr/auth/: views.py
flaskr/blog/: views.py
flaskr/templates/blog/: index.html  update.html
migrations/versions/: 054b01f0a41c_remove_password_field.py  6b4ae7983a44_add_password_field.py  b9a78a878132_initial_migration.py
