[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["Denis Kovalev <aikikode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.26"
mysql-connector-python = "^8.0.27"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
mysqlclient = "^2.0.3"
auth = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
